--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "clsx": "^2.0.0",
     "embla-carousel-autoplay": "^8.0.0-rc17",
     "embla-carousel-react": "^8.0.0-rc17",
-    "lucide-react": "^0.300.0",
-    "moment": "^2.29.4",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.302.0",
+    "moment": "^2.30.1",
     "next": "13.4.10",
     "postcss": "8.4.32",
     "react": "18.2.0",
